tests/data/partialapp/negative/No warning for right piped args2.fs
module M

let f x = 3 + x
let myFunc a b c d = a + b + c + d

// Seq.head [20; 0] |> myFunc 10 20
30 |> myFunc 10 20 21
